Creado mediante Colaboratory

--- a/Functions.ipynb
+++ b/Functions.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOuhu62ouGh9+2CXm7LoXun",
+      "authorship_tag": "ABX9TyO2D/k/HViGKIgVlnGBJb6Z",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -37,12 +37,74 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
-        "id": "TBrYlounBfPy"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "TBrYlounBfPy",
+        "outputId": "a7ba75ef-1156-41cb-8272-c1995c6ba294"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Meu nome é: Cynthia Estefanía Álvarez Orbe\n"
+          ]
+        }
+      ],
+      "source": [
+        "print('Meu nome é: Cynthia Estefanía Álvarez Orbe')"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import collections\n",
+        "def top_k(L, k):\n",
+        "    return dict(collections.Counter(L).most_common(k))"
+      ],
+      "metadata": {
+        "id": "9AcLlHo0CAbq"
+      },
+      "execution_count": 2,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "L = ['f', 'a', 'a', 'd', 'b', 'd', 'c', 'e', 'a', 'b', 'e', 'e', 'a', 'd']\n",
+        "k = 3\n",
+        "resultado = top_k(L=L, k=k)\n",
+        "print(f'resultado: {resultado}')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "sXgIBXXVCEVS",
+        "outputId": "74efdb33-8e26-412d-85df-82f27fba9323"
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "resultado: {'a': 4, 'd': 3, 'e': 3}\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "iOSBSw6zCHUy"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
